feat: filter and search get merchant(admin) and fix merchant category